<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:titleTextColor="@color/white"
        app:title="@string/app_name" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".UI.MainActivity">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/domanda_lingua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/domanda_lingua"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spinner_lingua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/lingue"
                    android:minHeight="48dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/domanda_informazioni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/domanda_info" />

                <CheckBox
                    android:id="@+id/checkBox_regista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Regista" />

                <CheckBox
                    android:id="@+id/checkBox_anno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anno" />

                <CheckBox
                    android:id="@+id/checkBox_paese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paese_prod" />

                <CheckBox
                    android:id="@+id/checkBox_sceneggiatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sceneggiatore" />

                <CheckBox
                    android:id="@+id/checkBox_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cast" />

                <CheckBox
                    android:id="@+id/checkBox_durata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/durata" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom|end">

            <Button
                android:id="@+id/bottone_conferma"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fatto"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>